<resources>
    <string name="app_name">Unwind</string>
    <string name="start">Start</string>
    <string name="take_a_deep">Take a Deep Breath</string>
    <string name="relax_and_b">Relax and begin to</string>
    <string name="unwind">Unwind</string>
    <string name="sign_in_to">Sign in to</string>
    <!--home page main-->
    <string name="i_am_delibe">I am deliberate and afraid of nothing.</string>
    <string name="how_are_you">How are you feeling today?</string>
    <string name="breathe">
        Breathe >
    </string>
    <string name="listen">
        Listen >
    </string>
    <string name="journal">Journal ></string>
    <string name="activity_chat">Chat</string>
    <!-- settings -->
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="unwind_prem">Unwind Premium</string>
    <string name="privacy">Privacy</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_nav">Nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--breathe-->
    <string name="for_today">For Today</string>
    <string name="kundalini_y">Kundalini yoga</string>
    <string name="the_breath_">The Breath of Fire</string>
    <string name="virabhadras">(Virabhadrasana I)</string>
    <string name="warrior_i">Warrior I</string>
    <string name="from">from</string>
    <string name="song_title">The Robin</string>

    <!-- premium-->
    <string name="first_7_day">
        First 7 Days FREE!
    </string>
    <string name="unlock_heal">
        Unlock Health Connect, the entire Listen library and more!
    </string>
    <string name="connect_you">
        Connect your phone\'s Health application for health and activity personalization!
    </string>
    <string name="enable_chat">
        Enable ChatGPT for a vent bot and to generate a personalized guide that uses meditation techniques tailored to your specific needs.
    </string>
    <string name="only_30_mon">
        Only $30/month ($360/year)
    </string>
    <string name="which_is_le">
        (which is less than $1/day)!!!
    </string>

<!--mood journal-->
    <string name="add_journal_entry">
        Add
    </string>
    <string name="save_journal_entry">
        Save
    </string>
    <string name="mood_you_selected">Mood You Selected</string>
    <string name="date_placeholder">Date Placeholder</string>
    <string name="journal_entry_preview">Journal Entry Preview</string>
    <string name="listen_button">Listen Button</string>
    <string name="happy_emoji">happy emoji</string>
    <string name="sad_emoji">sad emoji</string>
    <string name="depressed_emoji">depressed emoji</string>
    <string name="elated_emoji">elated emoji</string>
    <string name="okay_feeling_emoji">okay feeling emoji</string>
    <string name="spotify_prem">Buy premium to connect your Spotify account and play your favorite tracks!</string>
</resources>