<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.unwind.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_breathe" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_listen" />
        <action
            android:id="@+id/action_navigation_home_self"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_breathe"
        android:name="com.example.unwind.ui.breathe.BreatheFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_breathe" />

    <fragment
        android:id="@+id/navigation_listen"
        android:name="com.example.unwind.ui.listen.ListenFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_listen" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.unwind.ui.home.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat" />
</navigation>