<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_lar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <!-- Font family: Habibi, Line height: 25sp -->

    <!-- Font family: Habibi, Line height: 40sp -->

    <!-- Font family: Lily Script One, Line height: 88sp -->

    <TextView
        android:id="@+id/take_a_deep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:gravity="top"
        android:text="@string/take_a_deep"
        android:textAppearance="@style/take_a_deep" />

    <ImageView
        android:id="@+id/meditate"
        android:layout_width="356dp"
        android:layout_height="322dp"
        android:layout_below="@id/unwind"
        android:layout_marginStart="-14dp"
        android:layout_marginTop="6dp"
        android:contentDescription="Image"
        android:src="@drawable/meditate"
        android:translationX="40dp" />

    <TextView
        android:id="@+id/unwind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relax_and_b"
        android:layout_marginStart="95dp"
        android:layout_marginTop="27dp"
        android:gravity="top"
        android:text="@string/unwind"
        android:textAppearance="@style/unwind" />

    <TextView
        android:id="@+id/relax_and_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/take_a_deep"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:text="@string/relax_and_b"
        android:textAppearance="@style/relax_and_b" />

    <Button
        android:id="@+id/start"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_below="@id/meditate"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="17dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/start"
        android:textAppearance="@style/start"
        android:translationY="-20dp" />
    <!-- Font family: Ligconsolata, Line height: 25sp -->
</RelativeLayout>

    <!--<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_meditation_track"
        tools:itemCount="5"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    -->

