<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivMoodEmoji"
        android:contentDescription="@string/mood_you_selected"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_journal"
        app:layout_constraintTop_toTopOf="@+id/rectangle_journal"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_journal"
        android:elevation="2dp"/>

    <TextView
        android:id="@+id/tvMoodDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/date_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@id/ivMoodEmoji"
        app:layout_constraintTop_toTopOf="@id/ivMoodEmoji"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_journal"
        app:layout_constraintBottom_toTopOf="@id/tvJournalPreview"
        android:elevation="2dp"/>

    <TextView
        android:id="@+id/tvJournalPreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/journal_entry_preview"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/rectangle_journal"
        app:layout_constraintTop_toBottomOf="@id/tvMoodDate"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_journal"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_journal"
        android:elevation="2dp"/>

    <View
        android:id="@+id/rectangle_journal"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@drawable/rectangle_home"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
